# Live-Everything

./: .gitignore  README.md
agent/: .env.example  .gitignore  pyproject.toml
agent/src/: config.py  main.py
agent/src/agent/: main.py
agent/src/agent/api/: routes.py
agent/src/agent/core/rag/: chunker.py  ingestor.py
agent/src/api/: websocket.py
agent/src/core/: agent_manager.py  knowledge_base.py  knowledge_store.py  llm_provider.py  stt_provider.py  web_search.py
agent/src/core/rag/: __init__.py  retriever.py  startup_ingest.py  vector_store.py
agent/src/models/: agent.py  knowledge.py  message.py
data/: .gitignore
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: index.css
web/src/components/: AnswerMarkdown.tsx  InfoPanel.tsx  VoiceButton.tsx
web/src/services/: yoloDetectionService.ts
