[project]
name = "agent"
version = "0.1.0"
description = "AR商品讲解系统 — Agent服务"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.1",
    "openai-whisper>=20240930",
    "imageio-ffmpeg>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
agent = "src.main:start"
agent-server = "src.main:start"
